[package]
name = "rust_unit_app"
version = "0.1.0"
authors = ["dotwoo <dotwoo@gmail.com>"]
edition = "2018"

build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# rustup install nightly
# cargo +nightly build

[[bin]]
name = "rust_unit_app"
src = "src/main.rs"

[lib]
name = "rust_unit_app"
path = "src/lib.rs"

[dependencies]
libc = "0.2.90"
c2rust-bitfields = "0.3.0"
gflags = "0.3.8"